Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claims-api
spec:
  selector:
    matchLabels:
      greeting: hello
      version: one
  replicas: 1
  template:
    metadata:
      labels:
        greeting: hello
        version: one
    spec:
      containers:
        - name: claims-app
          image: "europe-west2-docker.pkg.dev/des-nvrs/hello-repo/demo:1.0.0"
