Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claims-api
spec:
  type: NodePort
  selector:
    greeting: hello
    version: one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
